Node Tools are not loaded into the interface when a blend file is loaded #121251

Closed
opened 2024-04-30 11:07:29 +02:00 by nazir · 4 comments

System Information
Operating system: Windows-10-10.0.22635-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.22

Blender Version
Broken: version: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-29 21:55, hash: 8d13a9608be3
Worked: (newest version of Blender that worked as expected)

I was testing the example file associated with this PR (#121043 ) and found that when starting the test file in BLender 4.2, Node Tools are not loaded into the interface. If we go into edit mode, they either appear or are not loaded either. You can also force to load Node Tools by changing the flags in which mode they should work in Geometry Nodes.

I attach an example file from Hans Goudey that I used to study it

**System Information** Operating system: Windows-10-10.0.22635-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.22 **Blender Version** Broken: version: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-29 21:55, hash: `8d13a9608be3` Worked: (newest version of Blender that worked as expected) I was testing the example file associated with this PR (https://projects.blender.org/blender/blender/pulls/121043 ) and found that when starting the test file in BLender 4.2, Node Tools are not loaded into the interface. If we go into edit mode, they either appear or are not loaded either. You can also force to load Node Tools by changing the flags in which mode they should work in Geometry Nodes. I attach an example file from Hans Goudey that I used to study it
nazir added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-04-30 11:07:29 +02:00
Contributor

I can confirm the issue.

when starting the test file in BLender 4.2, Node Tools are not loaded into the interface.

Using the file from blender/blender#121217 also.
It is like issue blender/blender#113237, but on file open and with non-asset tools.

I can confirm the issue. > when starting the test file in BLender 4.2, Node Tools are not loaded into the interface. Using the [file](https://projects.blender.org/attachments/12fd4fdc-5254-4bcc-8625-79e6a4897755) from blender/blender#121217 also. It is like issue blender/blender#113237, but on file open and with non-asset tools.
Member

I can confirm as well, bisecting.

I can confirm as well, bisecting.
Member
Caused by 52cff75ce08092a2f9a4ba46899bbf097988f618 @HooglyBoogly ^
Hans Goudey self-assigned this 2024-05-01 16:37:01 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-05-03 21:07:19 +02:00
Member

Thanks for the report! Fix incoming.

Thanks for the report! Fix incoming.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-05-03 21:13:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121251
No description provided.