Fix #121251: Node tools menu hidden on file load with local tools

Sometimes the asset library is not available when we still need
to draw menu because there are local data-block tools.